Separate code into per-class files

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,28 @@ project(dheunit)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_executable(dheunit dheunit.cpp)
+add_library(dheunit)
+
+target_sources(dheunit
+        INTERFACE
+        context.h
+        dheunit.h
+        suite.h
+        test.h
+        PRIVATE
+        context.cpp
+        dheunit.cpp
+        suite.cpp
+        test.cpp
+        )
+
+add_executable(example)
+
+target_sources(example
+        PRIVATE
+        example.cpp
+        )
+target_link_libraries(example
+        PRIVATE
+        dheunit
+        )
