--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,28 +3,5 @@ project(dheunit)
 
 set(CMAKE_CXX_STANDARD 11)
 
-add_library(dheunit)
-
-target_sources(dheunit
-        INTERFACE
-        context.h
-        dheunit.h
-        suite.h
-        test.h
-        PRIVATE
-        context.cpp
-        dheunit.cpp
-        suite.cpp
-        test.cpp
-        )
-
-add_executable(example)
-
-target_sources(example
-        PRIVATE
-        example.cpp
-        )
-target_link_libraries(example
-        PRIVATE
-        dheunit
-        )
+add_subdirectory(dheunit)
+add_subdirectory(examples)
