--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -5,6 +5,6 @@ set(CMAKE_CXX_STANDARD 11)
 
 enable_testing()
 
-add_subdirectory(snowhouse)
 add_subdirectory(dheunit)
 add_subdirectory(test)
+add_subdirectory(external)
