context.create() -> setUp(); destroy() -> tearDown()

--- a/tests/CMakeLists.txt
+++ b/tests/CMakeLists.txt
@@ -9,6 +9,7 @@ target_link_libraries(suite-tests
 
 target_sources(suite-tests
         PRIVATE
+        context-tests.cpp
         suite-tests.cpp
         test-tests.cpp
         )
