Fix invocation of CC

--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -29,5 +29,5 @@ jobs:
         env:
           CC: ${{ matrix.config.compiler }}
         run: |
-          $(CC) --version
+          ${CC} --version
           make vtest
